--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
+								<a href="HCI_projects.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
@@ -100,8 +99,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<h1>Creativity Is A Wild Mind &amp; A Disciplined Eye</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h1>Welcome to Clark's Website</h1>
+							<h2>This website is <i>under construction</i>!!</h2>
 							<p><a class="btn btn-primary btn-lg btn-demo" href="#"></i> View Demo</a> <a class="btn btn-primary btn-lg btn-learn">Learn More</a></p>
 						</div>
 					</div>
@@ -376,7 +375,7 @@
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">HCI Class Projects</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">About</a></li>
 					</ul>
