add about button

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<h1>Welcome to Clark's Website</h1>
-							<h2>This website is <i>under construction</i>!!</h2>
-							<p><a class="btn btn-primary btn-lg btn-demo" href="#"></i> View Demo</a> <a class="btn btn-primary btn-lg btn-learn">Learn More</a></p>
+							<h2>This website is <i>under construction</i>...</h2>
+							<p><a class="btn btn-primary btn-lg btn-learn" href="about.html">About Me</a></p>
 						</div>
 					</div>
 				</div>
