--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -67,24 +67,22 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Air<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">Clark Gibson Glymph<span>.</span></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="portfolio.html">Portfolio</a></li>
+							<li class="active"><a href="portfolio.html">HCI Class Projects</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
+								<a href="blog.html">HCI Class Projects</a>
 								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
+									<li><a href="#">Thing 1</a></li>
+									<li><a href="#">Thing 2</a></li>
+									<li><a href="#">Thing 3</a></li>
+									<li><a href="#">Thing 4</a></li>
 								</ul>
 							</li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -97,7 +95,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Portfolio</h2>
+					<h2>HCI Class Projects</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
 				</div>
 			</div>
@@ -108,11 +106,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-1.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -123,11 +116,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-2.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -138,11 +126,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -153,11 +136,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-5.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -168,11 +146,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-4.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -183,11 +156,6 @@
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-6.jpg);"></div>
 							<div class="portfolio-text">
 								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
 							</div> 
 						</a>
 					</div>
@@ -196,18 +164,6 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-started">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Hire Us!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
@@ -221,31 +177,10 @@
 					<ul class="fh5co-footer-links">
 						<li><a href="#">Home</a></li>
 						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">Blog</a></li>
 						<li><a href="#">About</a></li>
 					</ul>
 				</div>
 
-				<div class="col-md-2 col-md-push-1 fh5co-widget">
-					<h4>Categories</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Landing Page</a></li>
-						<li><a href="#">Real Estate</a></li>
-						<li><a href="#">Personal</a></li>
-						<li><a href="#">Business</a></li>
-						<li><a href="#">e-Commerce</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-4 col-md-push-1 fh5co-widget">
-					<h4>Contact Information</h4>
-					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://https://freehtml5.co">freehtml5.co</a></li>
-					</ul>
-				</div>
 
 			</div>
 
