--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -72,9 +72,8 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="portfolio.html">HCI Class Projects</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">HCI Class Projects</a>
+								<a href="portfolio.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
@@ -96,7 +95,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>HCI Class Projects</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+					<p>This project page is <b>under construction</b>.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -169,8 +168,8 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
-					<h4>Air</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h4>C.G.G.</h4>
+					<p>My personal website.</p>
 				</div>
 				<div class="col-md-2 col-md-push-1 fh5co-widget">
 					<h4>Links</h4>
