--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -73,7 +73,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
-								<a href="portfolio.html">HCI Class Projects</a>
+								<a href="HCI_projects.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
