Cleaning pages - removing unused content

--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -72,7 +72,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="has-dropdown">
+							<li class="has-dropdown"class="active">
 								<a href="HCI_projects.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
@@ -174,9 +174,9 @@
 				<div class="col-md-2 col-md-push-1 fh5co-widget">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="HCI_projects.html">HCI Class Projects</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</div>
 
@@ -191,10 +191,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
