--- a/about.html
+++ b/about.html
@@ -73,13 +73,14 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
-								<a href="portfolio.html">HCI Class Projects</a>
+								<a href="HCI_projects.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
 									<li><a href="#">Thing 3</a></li>
 									<li><a href="#">Thing 4</a></li>
 								</ul>
+							<li class="active"><a href="about.html">About</a></li>
 						</ul>
 					</div>
 				</div>
@@ -91,7 +92,7 @@
 	
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div>
 					<div class="fh5co-team text-center animate-box">
 						<figure>
 							<img src="images/user-1.jpg" alt="user">
@@ -123,9 +124,9 @@
 				<div class="col-md-2 col-md-push-1 fh5co-widget">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">HCI Class Projects</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="HCI_projects.html">HCI Class Projects</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</div>
 
@@ -140,10 +141,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
