Add headshot, little tweaks

--- a/about.html
+++ b/about.html
@@ -95,16 +95,16 @@
 				<div>
 					<div class="fh5co-team text-center animate-box">
 						<figure>
-							<img src="images/user-1.jpg" alt="user">
+							<img src="images/clark_headshot.jpg" alt="user">
 						</figure>
 						<p>Clark <a href="https://github.com/Gib-sun">Gib-sun</a> Glymph <br> <span class="text-mute">College Junior - Class of '26</span></p>
 						<blockquote>
 							<p>I'm a current Computer Science Major at Carleton College (with a minor in 
-								Digital Art & Humanities). Currently I'm a Digital Scholorship Intern who
-								 works largly in Digital Humanties and on front-end development on-campus.
-								During my free time you can find me starting a new crochet project (current VP 
-								of our knitting club) or in the campus radio station!! Tune into KRLX 88.1 FM
-							or listen online.</p>
+								Digital Art & Humanities). Currently I'm a Digital Scholorship Intern; I work
+								largly on Digital Humanties projects on the front-end development side of things.
+								During my free time you can find me starting a new crochet project (fun fact: I'm the 
+								current VP of our knitting club) or in the campus radio station! Tune into KRLX 88.1 FM
+								or <a href="https://content.krlx.org/">listen online.</a></p>
 						</blockquote>
 						
 
@@ -141,7 +141,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/clark-glymph/"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
