--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -72,7 +72,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="has-dropdown"class="active">
+							<li class="has-dropdown active">
 								<a href="HCI_projects.html">HCI Class Projects</a>
 								<ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
@@ -191,7 +191,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/clark-glymph/"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
