--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/clark-glymph/"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
