--- a/about.html
+++ b/about.html
@@ -95,19 +95,17 @@
 				<div>
 					<div class="fh5co-team text-center animate-box">
 						<figure>
-							<img src="images/clark_headshot.jpg" alt="user">
+							<img src="images/clark_headshot.jpg" alt="My wonderful headshot.">
 						</figure>
-						<p>Clark <a href="https://github.com/Gib-sun">Gib-sun</a> Glymph <br> <span class="text-mute">College Junior - Class of '26</span></p>
+						<p>Clark <a href="https://github.com/Gib-sun" title="Visit my GitHub, my middle name is my username.">Gib-sun</a> Glymph <br> <span class="text-mute">College Junior - Class of '26</span></p>
 						<blockquote>
 							<p>I'm a current Computer Science Major at Carleton College (with a minor in 
 								Digital Art & Humanities). Currently I'm a Digital Scholorship Intern; I work
 								largly on Digital Humanties projects on the front-end development side of things.
 								During my free time you can find me starting a new crochet project (fun fact: I'm the 
 								current VP of our knitting club) or in the campus radio station! Tune into KRLX 88.1 FM
-								or <a href="https://content.krlx.org/">listen online.</a></p>
+								or <a href="https://content.krlx.org/" title="Visit the K R L X 88.1 FM website.">listen online.</a></p>
 						</blockquote>
-						
-
 					</div>
 				</div>
 			</div>
@@ -136,8 +134,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
