--- a/about.html
+++ b/about.html
@@ -88,7 +88,11 @@
 			</div>
 		</div>
 	</nav>
-
+	<!-- Draggable DIV -->
+	<div id="mydiv">
+		<!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+		<div id="mydivheader"><img src="images/littleStars.jpg" alt="Little hand drawn stars that are draggable."></div>
+	</div>
 	
 		<div class="container">
 			<div class="row">
