--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 	<marquee scrollamount="10"
 	direction="right"
 	behavior="scroll">
-	<img src="images/littleStars.jpg" />
+	<img src="images/littleStars.png" width="50px" height="50px"/>
 	</marquee>
 	
 		<div class="container">
