--- a/about.html
+++ b/about.html
@@ -91,8 +91,8 @@
 	<marquee scrollamount="7"
 	direction="right"
 	behavior="scroll">
-	<img src="images/littleStars.png" width="1200px" height="600px"/>
-	<img src="images/littleStars.png" width="1200px" height="600px"/>
+	<img src="images/littleStars.png" width="200px" height="100px" alt="Stars scrolling the screen"/>
+	<img src="images/littleStars.png" width="200px" height="100px" alt="more stars pretty..."/>
 	</marquee>
 	
 		<div class="container">
