add resume and comment out unused dropdown

--- a/about.html
+++ b/about.html
@@ -74,12 +74,12 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
 								<a href="HCI_projects.html">HCI Class Projects</a>
-								<ul class="dropdown">
+								<!-- <ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
 									<li><a href="#">Thing 3</a></li>
 									<li><a href="#">Thing 4</a></li>
-								</ul>
+								</ul> -->
 							<li class="active"><a href="about.html">About</a></li>
 						</ul>
 					</div>
@@ -108,9 +108,11 @@
 								Digital Art & Humanities). Currently I'm a Digital Scholorship Intern; I work
 								largly on Digital Humanties projects on the front-end development side of things.
 								During my free time you can find me starting a new crochet project (fun fact: I'm the 
-								current VP of our knitting club) or in the campus radio station! Tune into KRLX 88.1 FM
-								or <a href="https://content.krlx.org/" title="Visit the K R L X 88.1 FM website.">listen online.</a></p>
+								current VP of our knitting club) or in the campus radio station! Tune into <abbr title="K R L X">KRLX</abbr> 88.1 <abbr title="Frequency Modulation">FM</abbr>
+								or <a href="https://content.krlx.org/" title="Visit the K R L X 88.1 F M website.">listen online.</a></p>
 						</blockquote>
+						<p><a class="btn btn-primary btn-lg btn-learn" href="https://drive.google.com/file/d/1DGWHi0vEpP-WIh3_klw_MeEM5pXYmCrF/view?usp=sharing" title="Link to my current resume">Resume</a></p>
+						</div> 
 					</div>
 				</div>
 			</div>
