--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
 								<a href="HCI_projects.html">HCI Class Projects</a>
-								<ul class="dropdown">
+								<!-- <ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
 									<li><a href="#">Thing 3</a></li>
 									<li><a href="#">Thing 4</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="about.html">About</a></li>
 						</ul>
