--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
 								Digital Art & Humanities). Currently I'm a Digital Scholorship Intern; I work
 								largly on Digital Humanties projects on the front-end development side of things.
 								During my free time you can find me starting a new crochet project (fun fact: I'm the 
-								current VP of our knitting club) or in the campus radio station! Tune into <abbr title="K R L X">KRLX</abbr> 88.1 <abbr title="Frequency Modulation">FM</abbr>
-								or <a href="https://content.krlx.org/" title="Visit the K R L X 88.1 F M website.">listen online.</a></p>
+								current VP of our knitting club) or in the campus radio station! Tune into  88.1 <abbr title="Frequency Modulation">FM</abbr>
+								or <a href="https://content.krlx.org/" title="Visit the KRLX 88.1 FM website.">listen online.</a></p>
 						</blockquote>
 						<p><a class="btn btn-primary btn-lg btn-learn" href="https://drive.google.com/file/d/1DGWHi0vEpP-WIh3_klw_MeEM5pXYmCrF/view?usp=sharing" title="Link to my current resume">Resume</a></p>
 						</div> 
