Ajusting Projects Page to start to add first project

--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -94,74 +94,33 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Projects</h2>
-					<h3>A collection of my personal and class projects.</h3>
+					<h2>HCI Laundry Project</h2>
+					<p>Interviews, Axial Coding, Figma Prototype</p>
 					<p>This project page is <b>under construction</b>.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="Laundry_HCI_2025.html">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-1.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>HCI Laundry Project</h3>
-								<h4>Interviews, Axial Coding, Figma Prototype</h4>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-2.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-5.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-4.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-6.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-			</div>
+			<h3> Teammates on this project: </h3>
+			<h4> Eva Cao, Stella Thompson, and Harry Xun </h4>
+			<h3> Goals of our project: </h3>
+			<p> The main goal for our project was to design an interface 
+				for an app that would help students on the Carleton campus navigate dorm laundry 
+				facilities with ease. Hopefully creating a less stressful experience while also keeping
+				the facilities cleaner by promoting less clothing left and lost within the laundry rooms. </p>
+			<h3> First Figma Prototype:</h3>
+			<h5> Created Individually.</h5>
+			<img src="#" height="500px" width="500px"></img>
+			
+			<!-- make sure to add alt text for figma images -->
+
+			<!-- Short description of how your prototype addresses 
+				the user needs you learned about from 
+				individual requirements elicitation 
+				(can be in paragraph form, bullet points, 
+				or whatever format that suits your website) -->
+		
+				
+
+
 		</div>
 	</div>
 	
