--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
-								<a href="HCI_projects.html">HCI Class Projects</a>
+								<a href="HCI_projects.html">Projects</a>
 								<!-- <ul class="dropdown">
 									<li><a href="#">Thing 1</a></li>
 									<li><a href="#">Thing 2</a></li>
@@ -121,7 +121,7 @@
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="HCI_projects.html">HCI Class Projects</a></li>
+						<li><a href="HCI_projects.html">Projects</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div>
