--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -108,9 +108,9 @@
 				the facilities cleaner by promoting less clothing left and lost within the laundry rooms. </p>
 			<h3> First Figma Prototype:</h3>
 			<h5> Created Individually.</h5>
-			<img src="fig1_HCI1" alt="Welcome screen with drop down menu."></img>
-			<img src="fig1_HCI2" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out."></img>
-			<img src="fig1_HCI3" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter."></img>
+			<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu."></img>
+			<img src="images/fig1_HCI2.png" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out."></img>
+			<img src="images/fig1_HCI3.png" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter."></img>
 			<h5>How this prototype addresses user needs:</h5>
 			<p> - Able to see which machines are in use/avalible.
 				- Able to mark timer on machine or leave a note for others.
