Testing img heights

--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -108,7 +108,7 @@
 				the facilities cleaner by promoting less clothing left and lost within the laundry rooms. </p>
 			<h3> First Figma Prototype:</h3>
 			<h5> Created Individually.</h5>
-			<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu."></img>
+			<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu." height="300" weight="100"></img>
 			<br>
 			<img src="images/fig1_HCI2.png" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out."></img>
 			<br>
