--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -108,13 +108,18 @@
 				the facilities cleaner by promoting less clothing left and lost within the laundry rooms. </p>
 			<h3> First Figma Prototype:</h3>
 			<h5> Created Individually.</h5>
-			<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu." height="300" weight="100"></img>
-			<br>
-			<br>
-			<img src="images/fig1_HCI2.png" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out." height="600" weight="100"></img>
-			<br>
-			<br>
-			<img src="images/fig1_HCI3.png" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter." height="300" weight="200"></img>
+			<div class="row">
+				<div class="column">
+					<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu." height="300" weight="100"></img>
+				</div>
+				<div class="column">
+					<img src="images/fig1_HCI2.png" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out." height="600" weight="100"></img>
+				</div>
+				<div class="column">
+					<img src="images/fig1_HCI3.png" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter." height="300" weight="200"></img>
+				</div>
+			  </div>
+			
 			<br>
 			<h4>How this prototype addresses user needs:</h4>
 
