--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -123,8 +123,8 @@
 			<br>
 			<h4>How this prototype addresses user needs:</h4>
 
-			<p> - Able to see which machines are in use/avalible.
-				- Able to mark timer on machine or leave a note for others.
+			<p> - Able to see which machines are in use/avalible. <br>
+				- Able to mark timer on machine or leave a note for others. <br>
 				- Reporting a broken machine is easily accessible.
 			</p>
 			<!-- make sure to add alt text for figma images -->
