--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -109,13 +109,13 @@
 			<h3> First Figma Prototype:</h3>
 			<h5> Created Individually.</h5>
 			<div class="row">
-				<div class="column">
+				<div class="col-md-4">
 					<img src="images/fig1_HCI1.png" alt="Welcome screen with drop down menu." height="300" weight="100"></img>
 				</div>
-				<div class="column">
+				<div class="col-md-4">
 					<img src="images/fig1_HCI2.png" alt="Top and side views of washer and dryers in Musser. Machines in use are greyed out." height="600" weight="100"></img>
 				</div>
-				<div class="column">
+				<div class="col-md-4">
 					<img src="images/fig1_HCI3.png" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter." height="300" weight="200"></img>
 				</div>
 			  </div>
