--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -103,7 +103,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-portfolio animate-box">
 						<a href="Laundry_HCI_2025.html">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-1.jpg);"></div>
+							<div class="portfolio-entry" style="background-image: url(images/fig1_HCI1.png);"></div>
 							<div class="portfolio-text">
 								<h3>HCI Laundry Project</h3>
 								<h4>Interviews, Axial Coding, Figma Prototype</h4>
@@ -116,47 +116,7 @@
 						<a href="#">
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-2.jpg);"></div>
 							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-5.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-4.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-							</div> 
-						</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-6.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
+								<h3>Crochet and Knitting Projects</h3>
 							</div> 
 						</a>
 					</div>
