Updates with videos and descriptions

--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -118,17 +118,105 @@
 				<div class="col-md-4">
 					<img src="images/fig1_HCI3.png" alt="Top down view of machines green to show selection. Other buttons avalible such as report, note adding, and timer starter." height="400px"></img>
 				</div>
-			  </div>
+			</div>
 			
 			<br>
 			<h4>How this prototype addresses user needs:</h4>
 
-			<p> - Able to see which machines are in use/avalible. <br>
-				- Able to mark timer on machine or leave a note for others. <br>
-				- Reporting a broken machine is easily accessible.
-			</p>
+			<ul> 
+				<li> Able to see which machines are in use/avalible. </li>
+				<li> Able to mark timer on machine or leave a note for others. </li>
+				<li> Reporting a broken machine is easily accessible. </li>
+			</ul>
 			<!-- make sure to add alt text for figma images -->
 
+			<h3> Updated Figma Prototype:</h3>
+			<h4> Our teams requirments for this design:</h4>
+
+			<ol> 
+				<li> Ability to view avalible machines. </li>
+					<ul>
+						<li>We want users to be able to know through our interface what machines are currently avalible.</li>
+						<li>Once a building is selcted unavalible machines are crossed out with a
+							timer indicating when the cycle will end. Other machines should be clickable to click.
+						</li>
+					</ul>
+				<li> Laundry status tracking. </li>
+					<ul>
+						<li>Users should have the ablity to track their laundry status within the app.</li>
+						<li>Once an avalible machine is selected, an option to set a timer to show how much 
+							time your laundry will be in the machine.
+						</li>
+					</ul>
+				<li> Avoiding conflicts/issues. </li>
+					<ul>
+						<li>To best avoid conflict, users should have options to comunicate with others using the app and laundry rooms.</li>
+						<li>The ability to mark down notes for others or report a machine as unavalible help
+							users avoid conflicts over laundry machine use or placement/removal of clothes. 
+							Note: Reporting machines would link to Carleton's report form (external) and is not
+							included in the interaction flow.
+						</li>
+					</ul>
+			</ol>
+
+			<ol>
+				<li>
+					<video height="400px" autoplay muted>
+						<source src="images/Avalible_machines.mp4" type="video/mp4" aria-label="Video showing avalible machines are clickable and unavalible are crossed out.">
+					  Your browser does not support the video tag.
+					</video>
+				</li>
+				<li>
+					<video height="400px" autoplay muted>
+						<source src="images/Set_timer.mp4" type="video/mp4" aria-label="Video showing the set timer option on avalible machines.">
+					  Your browser does not support the video tag.
+					</video>
+				</li>
+				<li>
+					<video height="400px" autoplay muted>
+						<source src="images/Avoid_conflicts.mp4" type="video/mp4" aria-label="Video showing the note and report buttons on avalible machines.">
+					  Your browser does not support the video tag.
+					</video>
+				</li>
+			</ol>
+
+			<p><a href="https://www.figma.com/design/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to design files.</a></p>
+			<p><a href="https://www.figma.com/proto/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to interaction flow to try it yourself!</a></p>
+
+			<h4> Our Research Process:</h4>
+			<!-- Short description of your team’s UX research process, 
+			 i.e. semi-structured interviews, fictional inquiry, focus groups. 
+			 You can even include anonymized quotes or sketches from the research process. -->
+			
+			<p>Our UX process for helping inform our inviddual designs was a collaborative process.
+				We each conducted interviews on our own collectivly conducting five interviews: three
+				fictional inquiry and two semi-structured interviews. Both informed our design in diffrent ways 
+				by asking our participants about they're previous experiences and prefrences for a hypothetical
+				laundry tracking application. 
+			</p>
+
+			<p>After this process we read through the transcripts and started looking for codes of what
+				our participants were experincing and what they would desire from an interface for this application.
+				We used a FigJam to help us sort out these ideas intially. After analyzing all the transcripts with codes 
+				individually we made a consensus tab in our code book to sort through our priorites and figure what our
+				collective understanding of the requirements statements that we would make for our project.
+			</p>
+
+			<div class="row">
+				<div class="col-md-4">
+					<h4>FigJam:</h4>
+					<img src="images/FigJam_Laundry.png" alt="A large digital page of sticky notes sorted by color and connected through arrows." height="400px"></img>
+				</div>
+				<div class="col-md-4">
+					<h4>Consensus in our Codebook:</h4>
+					<img src="images/Consensus.png" alt="An excel page of quotes from participants marking an 'X' under which codes they fall into." height="700px"></img>
+				</div>
+			</div>
+
+			
+			<!--Short description of your team’s analysis process, 
+			i.e. axial-coding and affinity diagramming. 
+			You can even include image(s) of or a link to your affinity diagram. -->
 			
 		
 				
