laundry page ajustments

--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -161,19 +161,19 @@
 
 			<ol>
 				<li>
-					<video height="400px" autoplay muted>
+					<video height="300px">
 						<source src="images/Avalible_machines.mp4" type="video/mp4" aria-label="Video showing avalible machines are clickable and unavalible are crossed out.">
 					  Your browser does not support the video tag.
 					</video>
 				</li>
 				<li>
-					<video height="400px" autoplay muted>
+					<video height="300px">
 						<source src="images/Set_timer.mp4" type="video/mp4" aria-label="Video showing the set timer option on avalible machines.">
 					  Your browser does not support the video tag.
 					</video>
 				</li>
 				<li>
-					<video height="400px" autoplay muted>
+					<video height="300px">
 						<source src="images/Avoid_conflicts.mp4" type="video/mp4" aria-label="Video showing the note and report buttons on avalible machines.">
 					  Your browser does not support the video tag.
 					</video>
@@ -183,7 +183,7 @@
 			<p><a href="https://www.figma.com/design/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to design files.</a></p>
 			<p><a href="https://www.figma.com/proto/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to interaction flow to try it yourself!</a></p>
 
-			<h4> Our Research Process:</h4>
+			<h5> Our Research Process:</h5>
 			<!-- Short description of your team’s UX research process, 
 			 i.e. semi-structured interviews, fictional inquiry, focus groups. 
 			 You can even include anonymized quotes or sketches from the research process. -->
@@ -203,11 +203,11 @@
 			</p>
 
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-2">
 					<h4>FigJam:</h4>
 					<img src="images/FigJam_Laundry.png" alt="A large digital page of sticky notes sorted by color and connected through arrows." height="400px"></img>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-2">
 					<h4>Consensus in our Codebook:</h4>
 					<img src="images/Consensus.png" alt="An excel page of quotes from participants marking an 'X' under which codes they fall into." height="700px"></img>
 				</div>
