--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -161,29 +161,36 @@
 
 			<ol>
 				<li>
-					<video height="300px">
-						<source src="images/Avalible_machines.mp4" type="video/mp4" aria-label="Video showing avalible machines are clickable and unavalible are crossed out.">
+					<video height="300px" controls>
+						<source src="images/Avalible_machines.mp4"  
+						type="video/mp4" 
+						aria-label="Video showing avalible machines are clickable and unavalible are crossed out.">
 					  Your browser does not support the video tag.
 					</video>
 				</li>
 				<li>
-					<video height="300px">
-						<source src="images/Set_timer.mp4" type="video/mp4" aria-label="Video showing the set timer option on avalible machines.">
+					<video height="300px" controls>
+						<source src="images/Set_timer.mp4"  
+						type="video/mp4" 
+						aria-label="Video showing the set timer option on avalible machines.">
 					  Your browser does not support the video tag.
 					</video>
 				</li>
 				<li>
-					<video height="300px">
-						<source src="images/Avoid_conflicts.mp4" type="video/mp4" aria-label="Video showing the note and report buttons on avalible machines.">
+					<video height="300px" controls>
+						<source src="images/Avoid_conflicts.mp4" 
+						type="video/mp4" 
+						aria-label="Video showing the note and report buttons on avalible machines.">
 					  Your browser does not support the video tag.
 					</video>
 				</li>
 			</ol>
 
+			<br>
 			<p><a href="https://www.figma.com/design/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to design files.</a></p>
 			<p><a href="https://www.figma.com/proto/2E4hVodeFuLU1phsA85I49/Laundry-Prototype?node-id=0-1&t=DDzMKzxk8duDa3DS-1">Link to interaction flow to try it yourself!</a></p>
 
-			<h5> Our Research Process:</h5>
+			<h3> Our Research Process:</h3>
 			<!-- Short description of your team’s UX research process, 
 			 i.e. semi-structured interviews, fictional inquiry, focus groups. 
 			 You can even include anonymized quotes or sketches from the research process. -->
@@ -203,13 +210,14 @@
 			</p>
 
 			<div class="row">
-				<div class="col-md-2">
+				<div class="col-md-7">
 					<h4>FigJam:</h4>
 					<img src="images/FigJam_Laundry.png" alt="A large digital page of sticky notes sorted by color and connected through arrows." height="400px"></img>
 				</div>
 				<div class="col-md-2">
+					<br>
 					<h4>Consensus in our Codebook:</h4>
-					<img src="images/Consensus.png" alt="An excel page of quotes from participants marking an 'X' under which codes they fall into." height="700px"></img>
+					<img src="images/Consensus.png" alt="An excel page of quotes from participants marking an 'X' under which codes they fall into." height="350px"></img>
 				</div>
 			</div>
 
