--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -189,11 +189,11 @@
 			 i.e. semi-structured interviews, fictional inquiry, focus groups. 
 			 You can even include anonymized quotes or sketches from the research process. -->
 			
-			<p>Our UX process for helping inform our inviddual designs was a collaborative process.
-				We each conducted interviews on our own collectivly conducting five interviews: three
-				fictional inquiry and two semi-structured interviews. Both informed our design in diffrent ways 
-				by asking our participants about they're previous experiences and prefrences for a hypothetical
-				laundry tracking application. 
+			<p>Our UX process that helped inform our invidual designs was a collaborative process.
+				We each conducted interviews on our own. Collectivly we conducting five interviews: three
+				fictional inquiry (more design focused) and two semi-structured interviews (more experience focused). 
+				Both informed our design in diffrent ways by asking our participants about they're previous experiences \
+				and prefrences for a hypothetical laundry tracking application. 
 			</p>
 
 			<p>After this process we read through the transcripts and started looking for codes of what
