--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -192,7 +192,7 @@
 			<p>Our UX process that helped inform our invidual designs was a collaborative process.
 				We each conducted interviews on our own. Collectivly we conducting five interviews: three
 				fictional inquiry (more design focused) and two semi-structured interviews (more experience focused). 
-				Both informed our design in diffrent ways by asking our participants about they're previous experiences \
+				Both informed our design in diffrent ways by asking our participants about they're previous experiences
 				and prefrences for a hypothetical laundry tracking application. 
 			</p>
 
