UX Eval Additions

--- a/HCI_projects.html
+++ b/HCI_projects.html
@@ -103,7 +103,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-portfolio animate-box">
 						<a href="Laundry_HCI_2025.html">
-							<div class="portfolio-entry" style="background-image: url(images/fig1_HCI1.png);"></div>
+							<div class="portfolio-entry" style="background-image: url(images/FigJam_Laundry.png);"></div>
 							<div class="portfolio-text">
 								<h3>HCI Laundry Project</h3>
 								<h4>Interviews, Axial Coding, Figma Prototype</h4>
