--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -95,8 +95,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>HCI Laundry Project</h2>
-					<p>Interviews, Axial Coding, Figma Prototype</p>
-					<p>This project page is <b>under construction</b>.</p>
+					<p>Interviews, Axial Coding, Figma Prototype, and UX Evaluation</p>
 				</div>
 			</div>
 			<h3> Teammates on this project: </h3>
@@ -215,13 +214,24 @@
 				</div>
 			</div>
 
-			
-			<!--Short description of your team’s analysis process, 
-			i.e. axial-coding and affinity diagramming. 
-			You can even include image(s) of or a link to your affinity diagram. -->
-			
-		
-				
+			<h3> UX Evaluation:</h3>
+			<h4> Main takeaways from my co-discovery session:</h4>
+				<ul> 
+					<li> The overall flow was liked by the testers but parts of the interface were not as intuitive.</li>
+					<li> Users thought adding more colors or a key to distinguish between machine status would be helpful. </li>
+					<li> Users also wanted a way to know if machines has a note attached to them. </li>
+				</ul>
+			<h4> What I changed about my prototype:</h4>
+			<ul> 
+				<li> The washer/dryer view button was split into two buttons to clarify what view users where on.</li>
+				<li> Colors to distinguish between avalible, selected, and in-use machines were added. </li>
+				<li> An info button for notes was added to machines with a note. </li>
+			</ul>
+
+			<br>
+			<p><a href="https://www.figma.com/design/KoN1JGfGByZiJe6nSv1ENn/Laundry-High-Fidelity?node-id=0-1&t=v6BPMDcyNGfIuh8D-1">Link to high-fidelity design files.</a></p>
+			<p><a href="https://www.figma.com/proto/KoN1JGfGByZiJe6nSv1ENn/Laundry-High-Fidelity?node-id=0-1&t=v6BPMDcyNGfIuh8D-1">Link to high-fidelity interaction flow to try it yourself!</a></p>
+
 
 
 		</div>
