Add images and descriptions

--- a/Laundry_HCI_2025.html
+++ b/Laundry_HCI_2025.html
@@ -228,6 +228,27 @@
 				<li> Colors to distinguish between avalible, selected, and in-use machines were added. </li>
 				<li> An info button for notes was added to machines with a note. </li>
 			</ul>
+			<h3> Final Figma Prototype:</h3>
+			<h5> Created Individually.</h5>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="images/welcome_screen.png" alt="Welcome screen with drop down menu of building selection." height="800px"></img>
+				</div>
+				<div class="col-md-4">
+					<img src="images/wash_dry_select_screen.png" alt="Washer and dryer views, plus screen of when a washer is selected and highlighted in green, more buttons appear." height="800px"></img>
+				</div>
+				<div class="col-md-4">
+					<img src="images/washer_buttons.png" alt="Display of washer button screens. One to set machine timer, other to leave a machine note." height="800px"></img>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="images/note_screen.png" alt="Screen showing when a note is left on a machine and what it displays when info icon is clicked." height="400px"></img>
+				</div>
+				<div class="col-md-4">
+					<img src="images/sandwich_menu.png" alt="Sandwich menu options to switch building selection or to contact developers." height="400px"></img>
+				</div>
+			</div>
 
 			<br>
 			<p><a href="https://www.figma.com/design/KoN1JGfGByZiJe6nSv1ENn/Laundry-High-Fidelity?node-id=0-1&t=v6BPMDcyNGfIuh8D-1">Link to high-fidelity design files.</a></p>
